--- a/MoveIT/MoveIT/Pages/Shared/_Layout.cshtml
+++ b/MoveIT/MoveIT/Pages/Shared/_Layout.cshtml
@@ -25,6 +25,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
+                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Authentication" asp-action="Login">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Files" asp-action="Upload">Upload</a>
+                        </li>
                     </ul>
                 </div>
             </div>
