Add validation for login & constants for actions & controllers

--- a/MoveIT/MoveIT/Views/Files/Upload.cshtml
+++ b/MoveIT/MoveIT/Views/Files/Upload.cshtml
@@ -1,4 +1,4 @@
-﻿@model MoveIT.Models.Files.UploadFileRequestModel
+﻿@model MoveIT.Models.Files.UploadFileViewModel
 
 <div class="container">
     <div class="row justify-content-center">
