Return Result<T> from gateways and convert codes to friendly error message

--- a/MoveIT/MoveIT/Views/Authentication/Login.cshtml
+++ b/MoveIT/MoveIT/Views/Authentication/Login.cshtml
@@ -25,10 +25,10 @@
                         </div>
                     </form>
 
-                    @if (ViewBag.ErrorMessage != null)
+                    @if (TempData.TryGetValue(ERROR_MESSAGE, out var msg))
                     {
                         <div class="alert alert-danger mt-3">
-                            @ViewBag.ErrorMessage
+                            @msg
                         </div>
                     }
                 </div>
