--- a/MoveIT/MoveIT/Views/_ViewImports.cshtml
+++ b/MoveIT/MoveIT/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using MoveIT
+@using static MoveIT.Common.Constants
 @namespace MoveIT.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
