--- a/MoveIT/MoveIT/Views/_ViewImports.cshtml
+++ b/MoveIT/MoveIT/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using MoveIT
 @using static MoveIT.Common.Constants
+@using MoveIT.Common.Contracts
 @namespace MoveIT.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
